--- a/templates/main/wheels.html
+++ b/templates/main/wheels.html
@@ -10,80 +10,78 @@
 {% block content %}
 
 
-
-
-{#    <h3>{{ element.name }}</h3>#}
-{#    <p>{{ element.text }}</p>#}
-{#    <p>{{ element.price }}</p>#}
-{#    <img src="{{ element.img.url }}" style="width: 400px; height: 250px">#}
-
-
-
-    <div class="album py-5 bg-light">
-    <div class="container">
+<div class="album py-3 bg-light">
+<div class="container">
 <form class="needs-validation" novalidate="" method="post">
     {% csrf_token %}
 
-<div class="row justify-content-auto" style="height: 130px">
-    <div class="col-sm-2">
-    {{ form.diametr }}
-    </div>
+    <div class="row justify-content-auto mb-3">
+        <div class="col-sm-2 mb-1">
+        {{ form.diametr }}
+        </div>
 
-    <div class="col-sm-2">
-    {{ form.shirina }}
-    </div>
+        <div class="col-sm-2 mb-1">
+        {{ form.shirina }}
+        </div>
 
-    <div class="col-sm-2">
-    {{ form.profil }}
-    </div>
+        <div class="col-sm-2 mb-1">
+        {{ form.profil }}
+        </div>
 
-    <div class="col-sm-2">
-       {{ form.season }}
-    </div>
-    <div class="col-sm-2">
-        {{ form.manufacturer }}
-    </div>
-    <div class="col-sm-2">
-    <button style="width: 200px" type="submit" class="btn btn-outline-secondary">Найти</button>
-    </div>
+        <div class="col-sm-2 mb-1">
+           {{ form.season }}
+        </div>
+        <div class="col-sm-2 mb-1">
+            {{ form.manufacturer }}
+        </div>
+        <div class="col-sm-2 mb-1">
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-outline-secondary"> Найти </button>
+            </div>
+        </div>
 
-</div>
+    </div>
 </form>
 
+{% if long > 0 %}
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-{% for element in shop %}
+    {% for element in shop %}
 
-        <a href="{% url 'wheelsdetail' element.id %}">
+            <a href="{% url 'wheelsdetail' element.id %}">
 
-        <div class="col" style="box-shadow: 3px 3px 2px 2px rgba(0,0,0,0.5); border-radius: 4px 4px 4px 4px;">
-          <div class="card shadow-sm">
-                <img src="{{ element.img.url }}" class="bd-placeholder-img mx-auto mt-2" height="300" width="60%">
-{#            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>#}
+            <div class="col" style="box-shadow: 3px 3px 2px 2px rgba(0,0,0,0.5); border-radius: 4px 4px 4px 4px;">
+              <div class="card shadow-sm">
+                    <img src="{{ element.img.url }}" class="bd-placeholder-img mx-auto mt-2" height="300" width="60%">
+    {#            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>#}
 
-            <div class="card-body">
-                <p class="card-text"><b>{{ element.radio }} {{ element.name }} </b></p>
-                <p class="text">{{ element.price }} ₽</p>
+                <div class="card-body">
+                    <p class="card-text"><b>{{ element.radio }} {{ element.name }} </b></p>
+                    <p class="text">{{ element.price }} ₽</p>
 
-              <div class="d-flex justify-content-between align-items-center">
+                  <div class="d-flex justify-content-between align-items-center">
 
-                <div class="btn-group">
-{#    card-img-top              <button onclick="document.location='{% url 'shoplist' element.id %}?next={{ request.path }}'" type="button" class="btn btn-sm btn-outline-secondary">Купить</button>#}
-{#                  <button onclick="document.location='{% url 'wheelsdetail' element.id %}?next={{ request.path }}'" type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>#}
+                    <div class="btn-group">
+    {#    card-img-top              <button onclick="document.location='{% url 'shoplist' element.id %}?next={{ request.path }}'" type="button" class="btn btn-sm btn-outline-secondary">Купить</button>#}
+    {#                  <button onclick="document.location='{% url 'wheelsdetail' element.id %}?next={{ request.path }}'" type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>#}
+                    </div>
+                    <small class="text-muted">Диаметр {{ element.diametr }}</small>
+                      <small class="text-muted">Ширина {{ element.shirina }}</small>
+                      <small class="text-muted">Профиль {{ element.profil }}</small>
+
+                  </div>
+
                 </div>
-                <small class="text-muted">Диаметр {{ element.diametr }}</small>
-                  <small class="text-muted">Ширина {{ element.shirina }}</small>
-                  <small class="text-muted">Профиль {{ element.profil }}</small>
-
               </div>
-
             </div>
-          </div>
-        </div>
-        </a>
+            </a>
 
-{% endfor %}
+    {% endfor %}
       </div>
+{% else %}
+    <h3>К сожалению по вашему запросу ничего не найдено</h3>
+    <p>Попробуйте изменить критерии поиска</p>
+{% endif %}
     </div>
-  </div>
+</div>
 
 {% endblock %}
