--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,7 +1,11 @@
-{% extends "main/base1.html" %}
-{% block content %}
-    <center>
-<p>Мы отправили вам по электронной почте инструкции по установке пароля. Если они не пришли через несколько минут, проверьте папку со спамом.</p>
-    </center>
+{% extends "main/base.html" %}
 
+{% block content %}
+<hr class="featurette-divider">
+<div class="container">
+    <center>
+<h2 class="mt-5 mb-5">Мы отправили вам по электронной почте инструкции по установке пароля. <br>Если они не пришли через несколько минут, проверьте папку со спамом.</h2>
+    </center>
+</div>
+<hr class="featurette-divider">
 {% endblock %}
