--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -7,10 +7,15 @@
 
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>-->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="{% static '/css/js.js' %}"></script>
+    <script src="maskinput.js"></script>
+<!--    <script type="text/javascript" src='{% static "css/tooltip.js" %}'></script>-->
 
     <style>
-        a {
+a {
     text-decoration: none; /* Отменяем подчеркивание у ссылки */
    }
 .bd-placeholder-img {
@@ -62,84 +67,20 @@
         text-align: center;
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
+
       }
     </style>
 </head>
-<body>
+<body class="">
 
-<!--<header class="p-3 bg-dark text-white fixed-top" style="opacity: 95%;">-->
-<!--    <div class="container-xl">-->
-<!--      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">-->
-<!--        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">-->
-<!--          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>-->
-<!--        </a>-->
+<script>
+window.onload = function() {
+    soc = JSON.parse(localStorage.getItem('socket'));
+    document.getElementById('len_socket').innerHTML = Object.keys(soc).length;
+}
 
-<!--        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">-->
-<!--            <li><a href="{% url 'index' %}" class="nav-link px-2 text-white"><h5>-->
-<!--                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-house-gear" viewBox="0 0 16 16">-->
-<!--                  <path d="M7.293 1.5a1 1 0 0 1 1.414 0L11 3.793V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v3.293l2.354 2.353a.5.5 0 0 1-.708.708L8 2.207l-5 5V13.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 2 13.5V8.207l-.646.647a.5.5 0 1 1-.708-.708L7.293 1.5Z"/>-->
-<!--                  <path d="M11.886 9.46c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.044c-.613-.181-.613-1.049 0-1.23l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382l.045-.148ZM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Z"/>-->
-<!--                </svg>-->
-<!--                 Главная</h5></a></li>-->
-<!--        <li><a href="#" class="nav-link px-2 text-white"><h5>-->
-<!--              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-coin" viewBox="0 0 16 16">-->
-<!--                  <path d="M5.5 9.511c.076.954.83 1.697 2.182 1.785V12h.6v-.709c1.4-.098 2.218-.846 2.218-1.932 0-.987-.626-1.496-1.745-1.76l-.473-.112V5.57c.6.068.982.396 1.074.85h1.052c-.076-.919-.864-1.638-2.126-1.716V4h-.6v.719c-1.195.117-2.01.836-2.01 1.853 0 .9.606 1.472 1.613 1.707l.397.098v2.034c-.615-.093-1.022-.43-1.114-.9H5.5zm2.177-2.166c-.59-.137-.91-.416-.91-.836 0-.47.345-.822.915-.925v1.76h-.005zm.692 1.193c.717.166 1.048.435 1.048.91 0 .542-.412.914-1.135.982V8.518l.087.02z"/>-->
-<!--                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>-->
-<!--                  <path d="M8 13.5a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm0 .5A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>-->
-<!--                </svg>-->
-<!--               Акции</h5></a></li>-->
+</script>
 
-<!--          <li><a href="{% url 'about' %}" class="nav-link px-2 text-white"><h5>-->
-<!--              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">-->
-<!--                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>-->
-<!--                  <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>-->
-<!--                </svg>-->
-<!--               О комании</h5></a></li>-->
-
-<!--          <li><a href="#" class="nav-link px-2 text-white"><h5>-->
-<!--              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-nut" viewBox="0 0 16 16">-->
-<!--                  <path d="m11.42 2 3.428 6-3.428 6H4.58L1.152 8 4.58 2h6.84zM4.58 1a1 1 0 0 0-.868.504l-3.428 6a1 1 0 0 0 0 .992l3.428 6A1 1 0 0 0 4.58 15h6.84a1 1 0 0 0 .868-.504l3.429-6a1 1 0 0 0 0-.992l-3.429-6A1 1 0 0 0 11.42 1H4.58z"/>-->
-<!--                  <path d="M6.848 5.933a2.5 2.5 0 1 0 2.5 4.33 2.5 2.5 0 0 0-2.5-4.33zm-1.78 3.915a3.5 3.5 0 1 1 6.061-3.5 3.5 3.5 0 0 1-6.062 3.5z"/>-->
-<!--                </svg>-->
-<!--               Шиномонтаж</h5></a></li>-->
-
-<!--          <li><a href="#" class="nav-link px-2 text-white"><h5>-->
-<!--                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">-->
-<!--                  <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>-->
-<!--                </svg>-->
-<!--               Корзина</h5></a></li>-->
-
-<!--            {% if user.is_superuser and user.is_authenticated %}-->
-<!--                <li><a href="{% url 'add' %}" class="nav-link px-2 text-warning"><h5>-->
-<!--                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">-->
-<!--                      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>-->
-<!--                      <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>-->
-<!--                    </svg>-->
-<!--                     Добавить</h5></a></li>-->
-<!--            {% endif %}-->
-<!--        </ul>-->
-
-<!--        <div class="text-end">-->
-<!--            {% if user.is_authenticated %}-->
-<!--{#                <button onclick="document.location='{% url 'logout' %}?next={{ request.path }}'" type="button" class="btn btn-outline-light me-2">Выход</button>#}-->
-<!--{#                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"><a href="#" class="nav-link px-2 text-white">Аккаунт</a></ul>#}-->
-
-<!--              <a href="{% url 'account' %}" class="nav-link text-white"><h5>-->
-<!--                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">-->
-<!--                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>-->
-<!--                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>-->
-<!--                </svg>-->
-<!--                {{ user.last_name }} {{ user.first_name }}</h5>-->
-<!--              </a>-->
-
-<!--            {% else %}-->
-<!--          <button onclick="document.location='{% url 'login' %}?next={{ request.path }}'" type="button" class="btn btn-outline-light me-2">Вход</button>-->
-<!--          <button onclick="document.location='{% url 'regist' %}?next={{ request.path }}'" type="button" class="btn btn-warning">Регистрация</button>-->
-<!--            {% endif %}-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </header>-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="opacity: 95%;" aria-label="Ninth navbar example">
     <div class="container-xl">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
@@ -176,19 +117,44 @@
                 </svg>
                Шиномонтаж</h5></a></li>
 
-          <li><a href="#" class="nav-link px-2 text-white"><h5>
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                  <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                </svg>
-               Корзина</h5></a></li>
+          <li><a href="{% url 'socket_base' %}" class="nav-link px-2 text-white">
+              <div class="row">
+                <div class="col-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                      <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </svg>
+                </div>
+                <div class="col-sm-6">
+                  <h5>
+                   Корзина
+                  </h5>
+                </div>
+                <div class="col">
+                  <p style="font-size: 10px; color: #FFD700" id="len_socket">0</p>
+                </div>
+              </div>
+          </a></li>
 
             {% if user.is_superuser and user.is_authenticated %}
-                <li><a href="{% url 'add' %}" class="nav-link px-2 text-warning"><h5>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
-                      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                      <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                    </svg>
-                     Добавить</h5></a></li>
+                <li class="nav-item px-2 dropdown">
+                    <h5>
+                    <a class="nav-link dropdown-toggle text-warning" href="#" data-bs-toggle="dropdown" aria-expanded="true">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                        </svg>
+                       Админ
+                    </a>
+                    <ul class="dropdown-menu text-warning" data-bs-popper="static">
+                        <li><a class="dropdown-item" href="{% url 'add' %}">Добавить шину / диск</a></li>
+                        <li><a class="dropdown-item" href="{% url 'add_any' %}">Загрузить excel</a></li>
+                        <li><a class="dropdown-item" href="{% url 'anketa' %}">Обратная связь</a></li>
+                        <li><a class="dropdown-item" href="{% url 'order' %}">Заказы</a></li>
+                        <li><a class="dropdown-item" href="http://127.0.0.1:8000/admin/">Админка</a></li>
+                    </ul>
+                    </h5>
+                </li>
             {% endif %}
         </ul>
         {% if user.is_authenticated %}
