--- a/templates/main/disks.html
+++ b/templates/main/disks.html
@@ -9,45 +9,71 @@
 
 {% block content %}
 
+<div class="album py-3 bg-light">
+<div class="container">
+<form class="needs-validation" novalidate="" method="post">
+    {% csrf_token %}
 
-
-
-{#    <h3>{{ element.name }}</h3>#}
-{#    <p>{{ element.text }}</p>#}
-{#    <p>{{ element.price }}</p>#}
-{#    <img src="{{ element.img.url }}" style="width: 400px; height: 250px">#}
-
-
-
-    <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-{% for element in shop %}
-
-        <div class="col">
-          <div class="card shadow-sm">
-              <img src="{{ element.img.url }}" class="bd-placeholder-img card-img-top" width="100%" height="225">
-{#            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>#}
-
-            <div class="card-body">
-                <p class="card-text"><b>{{ element.radio }} {{ element.name }}</b></p>
-                <p class="card-text">{{ element.price }} ₽</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-{#                  <button onclick="document.location='{% url 'shoplist' element.id %}?next={{ request.path }}'" type="button" class="btn btn-sm btn-outline-secondary">Купить</button>#}
-                  <button onclick="document.location='{% url 'disksdetail' element.id %}?next={{ request.path }}'" type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>
-                </div>
-                <small class="text-muted">Диаметр {{ element.diametr }}</small>
-                  <small class="text-muted">Вылет {{ element.shirina }}</small>
-                  <small class="text-muted">Крепеж {{ element.profil }}</small>
-              </div>
-            </div>
-          </div>
+    <div class="row justify-content-auto mb-3">
+        <div class="col-sm-2 mb-1">
+        {{ form.diametr }}
         </div>
 
-{% endfor %}
-      </div>
+        <div class="col-sm-2 mb-1">
+        {{ form.shirina }}
+        </div>
+
+        <div class="col-sm-2 mb-1">
+        {{ form.profil }}
+        </div>
+
+        <div class="col-sm-2 mb-1">
+           {{ form.type }}
+        </div>
+        <div class="col-sm-2 mb-1">
+            {{ form.manufacturer }}
+        </div>
+        <div class="col-sm-2 mb-1">
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-outline-secondary"> Найти </button>
+            </div>
+        </div>
+
+    </div>
+</form>
+
+{% if long > 0 %}
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    {% for element in shop %}
+        <a href="{% url 'disksdetail' element.id %}">
+
+            <div class="col">
+              <div class="card shadow-sm">
+                  <img src="{{ element.img.url }}" class="bd-placeholder-img card-img-top" width="100%" height="225">
+    {#            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>#}
+
+                <div class="card-body">
+                    <p class="card-text"><b>{{ element.radio }} {{ element.name }}</b></p>
+                    <p class="card-text">{{ element.price }} ₽</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+<!--    {#                  <button onclick="document.location='{% url 'shoplist' element.id %}?next={{ request.path }}'" type="button" class="btn btn-sm btn-outline-secondary">Купить</button>#}-->
+<!--                      <button onclick="document.location='{% url 'disksdetail' element.id %}?next={{ request.path }}'" type="button" class="btn btn-sm btn-outline-secondary">Подробнее</button>-->
+                    </div>
+                    <small class="text-muted">Диаметр {{ element.diametr }}</small>
+                      <small class="text-muted">Вылет (ЕТ) {{ element.shirina }}</small>
+                      <small class="text-muted">Крепеж {{ element.profil }}</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </a>
+    {% endfor %}
+          </div>
+{% else %}
+    <h3>К сожалению по вашему запросу ничего не найдено</h3>
+    <p>Попробуйте изменить критерии поиска</p>
+{% endif %}
     </div>
   </div>
 
