--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,9 +1,14 @@
-{% extends "main/base1.html" %}
+{% extends "main/base.html" %}
 {% block content %}
 
-<center>
-<h1>Пароль был успешно изменен!</h1>
-<p><a href="{% url 'login' %}">log in again?</a></p>
-</center>
+<hr class="featurette-divider">
 
+<div class="container">
+    <center>
+        <h2>Пароль был успешно изменен!</h2>
+        <p><a href="{% url 'login' %}">Войти снова?</a></p>
+    </center>
+</div>
+
+<hr class="featurette-divider">
 {% endblock %}
