--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,33 +1,39 @@
-{% extends "main/base1.html" %}
+{% extends "main/base.html" %}
 
 {% block content %}
-
+<div class="container">
 <center>
     {% if validlink %}
-        <p>Нажмите ENTER чтобы сохранить новый пароль</p>
+        <p>Введите новый пароль</p>
         <form action="" method="post">
             {% csrf_token %}
             <table>
                 <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
+                    <td>
+                        <label for="id_new_password1">Пароль:</label></td>
                     <td>{{ form.new_password1 }}</td>
                 </tr>
+
                 <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
+                    <td>
+                        <label for="id_new_password2">Повторите пароль:</label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Change my password" /></td>
+                    <td><input class="btn btn-warning mb-3 mt-4" type="submit" value="Изменить пароль" /></td>
+                </tr>
+
+                <tr>
+                    <p>{{ form.new_password1.errors }}</p>
+                    <p>{{ form.new_password2.errors }}</p>
                 </tr>
             </table>
         </form>
     {% else %}
         <h1>Не удалось сбрость пароль</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+        <p> Ссылка для сброса пароля недействительна, возможно, потому, что она уже использовалась. Пожалуйста, запросите сброс нового пароля</p>
     {% endif %}
 </center>
-
+</div>
 {% endblock %}
