--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,4 +1,4 @@
-{% extends "main/base1.html" %}
+{% extends "main/base.html" %}
 {% block content %}
 
 <center>
@@ -6,7 +6,7 @@
 <form action="" method="post">{% csrf_token %}
     {% if form.email.errors %} {{ form.email.errors }} {% endif %}
         <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Сбросить пароль" />
+    <input type="submit" class="btn btn-outline-danger" value="Сбросить пароль" />
 </form>
 </center>
 
